# scalable-capital-at-tax-report

./: .gitignore  JSON_USAGE_GUIDE.md  README.md  pyproject.toml
src/scalable_capital/: __init__.py  constants.py  excel_report.py  exceptions.py  json_converter.py  main.py  models.py  tax_calculator.py  terminal_report.py
src/scalable_capital/tui/: app.py  state.py  utils.py
src/scalable_capital/tui/screens/: config_form.py  config_manager.py  file_selection.py  json_conversion.py  processing.py  results.py  review.py  welcome.py
