[project]
name = "scalable-capital"
version = "0.1.0"
description = "Scalable Capital tax calculator"
authors = [
    { name = "Riccardo Busetti", email = "riccardob36@gmail.com" }
]
dependencies = [
    "currencyconverter>=0.17.17",
    "pandas>=2.2.3",
    "numpy>=2.2.0",
    "xlsxwriter>=3.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scalable_capital"]
